data/derived/sp14/progs/unify/prog1626.ml.out
Characters 129-139:
  | Sine x   -> Printf.sprintf "Sine(%s)" exprToString x;;
                               ^^^^^^^^^^
Error: This expression has type
         ('a -> 'b, unit, string, string, string, 'a -> 'b)
         CamlinternalFormatBasics.fmt
       but an expression was expected of type
         ('a -> 'b, unit, string, string, string, string)
         CamlinternalFormatBasics.fmt
       Type 'a -> 'b is not compatible with type string 
